################################################################################
##
## Copyright (C) 2021-2021 FlibidyDibidy
##
## This file is part of Graphite.
##
## Graphite is free software; you can redistribute it and#or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## Graphite is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Graphite; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
##
################################################################################
cmake_minimum_required(VERSION 3.6)
project(nestopia)

add_library(3rdnestopia STATIC
    "core/NstVideoFilterNone.cpp"
    "core/vssystem/NstVsSuperXevious.cpp"
    "core/vssystem/NstVsSystem.cpp"
    "core/vssystem/NstVsRbiBaseball.cpp"
    "core/vssystem/NstVsTkoBoxing.cpp"
    "core/NstImage.cpp"
    "core/NstVideoFilterNtsc.cpp"
    "core/NstMemory.cpp"
    "core/NstStream.cpp"
    "core/NstVideoFilterScaleX.cpp"
    "core/NstVideoFilterNtscCfg.cpp"
    "core/NstSoundRenderer.cpp"
    "core/NstPpu.cpp"
    "core/NstCrc32.cpp"
    "core/NstVector.cpp"
    "core/NstCartridge.cpp"
    "core/NstSoundPlayer.cpp"
    "core/NstTrackerMovie.cpp"
    "core/NstCartridgeUnif.cpp"
    "core/NstCartridgeInes.cpp"
    "core/NstImageDatabase.cpp"
    "core/NstVideoScreen.cpp"
    "core/NstPins.cpp"
    "core/NstPatcherUps.cpp"
    "core/NstChips.cpp"
    "core/NstCartridgeRomset.cpp"
    "core/board/NstBoardBmcMarioParty7in1.cpp"
    "core/board/NstBoardKayH2288.cpp"
    "core/board/NstBoardUnlTf1201.cpp"
    "core/board/NstBoardKonamiVrc2.cpp"
    "core/board/NstBoardNamcot163.cpp"
    "core/board/NstBoardIremH3001.cpp"
    "core/board/NstBoardSunsoft5b.cpp"
    "core/board/NstBoardJyCompany.cpp"
    "core/board/NstBoardBmcSuperVision16in1.cpp"
    "core/board/NstBoardBmcSuperGun20in1.cpp"
    "core/board/NstBoardTxcTw.cpp"
    "core/board/NstBoardAcclaimMcAcc.cpp"
    "core/board/NstBoardBmcSuperBig7in1.cpp"
    "core/board/NstBoardJalecoJf19.cpp"
    "core/board/NstBoardSuperGamePocahontas2.cpp"
    "core/board/NstBoardBmcSuperHiK300in1.cpp"
    "core/board/NstBoardBmcVt5201.cpp"
    "core/board/NstBoardHes.cpp"
    "core/board/NstBoardWaixingZs.cpp"
    "core/board/NstBoardIremLrog017.cpp"
    "core/board/NstBoardTengenRambo1.cpp"
    "core/board/NstBoardBtlT230.cpp"
    "core/board/NstBoardDiscrete.cpp"
    "core/board/NstBoardBenshengBs5.cpp"
    "core/board/NstBoardSachenTca01.cpp"
    "core/board/NstBoardBmcGamestarA.cpp"
    "core/board/NstBoardWaixingSgzlz.cpp"
    "core/board/NstBoardSunsoftDcs.cpp"
    "core/board/NstBoardBmcResetBased4in1.cpp"
    "core/board/NstBoardBtlSmb2c.cpp"
    "core/board/NstBoardKonamiVrc3.cpp"
    "core/board/NstBoardSubor.cpp"
    "core/board/NstBoardBmcSuper24in1.cpp"
    "core/board/NstBoardBandaiOekaKids.cpp"
    "core/board/NstBoardUnlEdu2000.cpp"
    "core/board/NstBoardBmcSuper22Games.cpp"
    "core/board/NstBoardNanjing.cpp"
    "core/board/NstBoardKayPandaPrince.cpp"
    "core/board/NstBoardBmcBallgames11in1.cpp"
    "core/board/NstBoardCxRom.cpp"
    "core/board/NstBoardKonamiVrc6.cpp"
    "core/board/NstBoardBmc15in1.cpp"
    "core/board/NstBoardKasing.cpp"
    "core/board/NstBoardSuperGameBoogerman.cpp"
    "core/board/NstBoardBtlSmb3.cpp"
    "core/board/NstBoardUnlKingOfFighters97.cpp"
    "core/board/NstBoardBmc110in1.cpp"
    "core/board/NstBoardBandaiKaraokeStudio.cpp"
    "core/board/NstBoardRcm.cpp"
    "core/board/NstBoardMmc5.cpp"
    "core/board/NstBoardTxcPoliceman.cpp"
    "core/board/NstBoardKonamiVrc7.cpp"
    "core/board/NstBoardBandaiDatach.cpp"
    "core/board/NstBoardTaitoTc0190fmc.cpp"
    "core/board/NstBoardUnlWorldHero.cpp"
    "core/board/NstBoardBxRom.cpp"
    "core/board/NstBoardBmc22Games.cpp"
    "core/board/NstBoardKonamiVrc1.cpp"
    "core/board/NstBoardTxc.cpp"
    "core/board/NstBoardWaixingFfv.cpp"
    "core/board/NstBoardTaitoX1005.cpp"
    "core/board/NstBoardNtdec.cpp"
    "core/board/NstBoardBmcNovelDiamond.cpp"
    "core/board/NstBoardNamcot340.cpp"
    "core/board/NstBoardBtlPikachuY2k.cpp"
    "core/board/NstBoardJalecoJf13.cpp"
    "core/board/NstBoardZz.cpp"
    "core/board/NstBoardHenggedianzi.cpp"
    "core/board/NstBoardBmc21in1.cpp"
    "core/board/NstBoardFukutake.cpp"
    "core/board/NstBoardNamcot34xx.cpp"
    "core/board/NstBoardSomeriTeamSl12.cpp"
    "core/board/NstBoardCnePsb.cpp"
    "core/board/NstBoardGxRom.cpp"
    "core/board/NstBoardWaixing.cpp"
    "core/board/NstBoardSunsoftFme7.cpp"
    "core/board/NstBoardBmc9999999in1.cpp"
    "core/board/NstBoardIremHolyDiver.cpp"
    "core/board/NstBoard.cpp"
    "core/board/NstBoardBmcSuper700in1.cpp"
    "core/board/NstBoardKonamiVsSystem.cpp"
    "core/board/NstBoardUnlA9746.cpp"
    "core/board/NstBoardKaiser.cpp"
    "core/board/NstBoardBmc76in1.cpp"
    "core/board/NstBoardBtlMarioBaby.cpp"
    "core/board/NstBoardMmc2.cpp"
    "core/board/NstBoardSachenSa72008.cpp"
    "core/board/NstBoardSachenTcu.cpp"
    "core/board/NstBoardRumbleStation.cpp"
    "core/board/NstBoardFutureMedia.cpp"
    "core/board/NstBoardNamcot175.cpp"
    "core/board/NstBoardUnlMortalKombat2.cpp"
    "core/board/NstBoardOpenCorp.cpp"
    "core/board/NstBoardWaixingSecurity.cpp"
    "core/board/NstBoardVsSystem.cpp"
    "core/board/NstBoardSachenS8259.cpp"
    "core/board/NstBoardCneShlz.cpp"
    "core/board/NstBoardDreamtech.cpp"
    "core/board/NstBoardBmc31in1.cpp"
    "core/board/NstBoardTxcMxmdhtwo.cpp"
    "core/board/NstBoardSachenSa0037.cpp"
    "core/board/NstBoardAveD1012.cpp"
    "core/board/NstBoardWaixingSh2.cpp"
    "core/board/NstBoardAgci.cpp"
    "core/board/NstBoardKonamiVrc4.cpp"
    "core/board/NstBoardBmcSuperHiK4in1.cpp"
    "core/board/NstBoardTxRom.cpp"
    "core/board/NstBoardJalecoJf17.cpp"
    "core/board/NstBoardWaixingSgz.cpp"
    "core/board/NstBoardCaltron.cpp"
    "core/board/NstBoardBmc72in1.cpp"
    "core/board/NstBoardSunsoft2.cpp"
    "core/board/NstBoardMagicKidGoogoo.cpp"
    "core/board/NstBoardBandaiAerobicsStudio.cpp"
    "core/board/NstBoardNihon.cpp"
    "core/board/NstBoardBmcHero.cpp"
    "core/board/NstBoardEvent.cpp"
    "core/board/NstBoardRexSoftSl1632.cpp"
    "core/board/NstBoardBtlSuperBros11.cpp"
    "core/board/NstBoardBmcVrc4.cpp"
    "core/board/NstBoardSachenStreetHeroes.cpp"
    "core/board/NstBoardAxRom.cpp"
    "core/board/NstBoardNitra.cpp"
    "core/board/NstBoardSunsoft3.cpp"
    "core/board/NstBoardFb.cpp"
    "core/board/NstBoardUnlXzy.cpp"
    "core/board/NstBoardUnlSuperFighter3.cpp"
    "core/board/NstBoardIremKaiketsu.cpp"
    "core/board/NstBoardBmcY2k64in1.cpp"
    "core/board/NstBoardBmc1200in1.cpp"
    "core/board/NstBoardBandaiLz93d50.cpp"
    "core/board/NstBoardAction53.cpp"
    "core/board/NstBoardGouder.cpp"
    "core/board/NstBoardBtlTobidaseDaisakusen.cpp"
    "core/board/NstBoardBmcGolden190in1.cpp"
    "core/board/NstBoardBmc35in1.cpp"
    "core/board/NstBoardCamerica.cpp"
    "core/board/NstBoardAe.cpp"
    "core/board/NstBoardBmcGoldenCard6in1.cpp"
    "core/board/NstBoardBtl6035052.cpp"
    "core/board/NstBoardBmcFamily4646B.cpp"
    "core/board/NstBoardBmcCh001.cpp"
    "core/board/NstBoardBandaiLz93d50ex.cpp"
    "core/board/NstBoardMmc1.cpp"
    "core/board/NstBoardFfe.cpp"
    "core/board/NstBoardUnlN625092.cpp"
    "core/board/NstBoardBmc36in1.cpp"
    "core/board/NstBoardBtlSmb2b.cpp"
    "core/board/NstBoardRexSoftDb5z.cpp"
    "core/board/NstBoardInlNsf.cpp"
    "core/board/NstBoardMmc6.cpp"
    "core/board/NstBoardBtlShuiGuanPipe.cpp"
    "core/board/NstBoardJalecoSs88006.cpp"
    "core/board/NstBoardSuperGameLionKing.cpp"
    "core/board/NstBoardBtlGeniusMerioBros.cpp"
    "core/board/NstBoardBmc20in1.cpp"
    "core/board/NstBoardMmc4.cpp"
    "core/board/NstBoardJalecoJf11.cpp"
    "core/board/NstBoardBtlDragonNinja.cpp"
    "core/board/NstBoardIremG101.cpp"
    "core/board/NstBoardBmcCtc65.cpp"
    "core/board/NstBoardBmc8157.cpp"
    "core/board/NstBoardBmc800in1.cpp"
    "core/board/NstBoardQj.cpp"
    "core/board/NstBoardJalecoJf16.cpp"
    "core/board/NstBoardTengen.cpp"
    "core/board/NstBoardBmcSuper40in1.cpp"
    "core/board/NstBoardSunsoft4.cpp"
    "core/board/NstBoardSachenSa72007.cpp"
    "core/board/NstBoardUnlCc21.cpp"
    "core/board/NstBoardBtlAx5705.cpp"
    "core/board/NstBoardFujiya.cpp"
    "core/board/NstBoardBmcA65as.cpp"
    "core/board/NstBoardWaixingPs2.cpp"
    "core/board/NstBoardMagicSeries.cpp"
    "core/board/NstBoardWhirlwind.cpp"
    "core/board/NstBoardBmcPowerjoy84in1.cpp"
    "core/board/NstBoardCneDecathlon.cpp"
    "core/board/NstBoardBmc150in1.cpp"
    "core/board/NstBoardMmc3.cpp"
    "core/board/NstBoardBmcGoldenGame260in1.cpp"
    "core/board/NstBoardTaitoX1017.cpp"
    "core/board/NstBoardBmc64in1.cpp"
    "core/board/NstBoardBtl2708.cpp"
    "core/board/NstBoardUxRom.cpp"
    "core/board/NstBoardSachenSa0036.cpp"
    "core/board/NstBoardUnlKingOfFighters96.cpp"
    "core/board/NstBoardSachen74x374.cpp"
    "core/board/NstBoardBandai24c0x.cpp"
    "core/board/NstBoardTaitoTc0190fmcPal16r4.cpp"
    "core/board/NstBoardBtlSmb2a.cpp"
    "core/board/NstBoardBmcGamestarB.cpp"
    "core/board/NstBoardSunsoft1.cpp"
    "core/board/NstBoardHosenkan.cpp"
    "core/board/NstBoardAveNina.cpp"
    "core/board/NstBoardCony.cpp"
    "core/board/NstBoardBmcFk23c.cpp"
    "core/board/NstBoardBmcT262.cpp"
    "core/NstFile.cpp"
    "core/NstPatcher.cpp"
    "core/NstTrackerRewinder.cpp"
    "core/NstProperties.cpp"
    "core/NstXml.cpp"
    "core/NstTracker.cpp"
    "core/input/NstInpPowerPad.cpp"
    "core/input/NstInpPartyTap.cpp"
    "core/input/NstInpHoriTrack.cpp"
    "core/input/NstInpExcitingBoxing.cpp"
    "core/input/NstInpMouse.cpp"
    "core/input/NstInpFamilyKeyboard.cpp"
    "core/input/NstInpCrazyClimber.cpp"
    "core/input/NstInpBarcodeWorld.cpp"
    "core/input/NstInpPowerGlove.cpp"
    "core/input/NstInpMahjong.cpp"
    "core/input/NstInpBandaiHyperShot.cpp"
    "core/input/NstInpPaddle.cpp"
    "core/input/NstInpFamilyTrainer.cpp"
    "core/input/NstInpDoremikkoKeyboard.cpp"
    "core/input/NstInpAdapter.cpp"
    "core/input/NstInpPokkunMoguraa.cpp"
    "core/input/NstInpPad.cpp"
    "core/input/NstInpZapper.cpp"
    "core/input/NstInpTurboFile.cpp"
    "core/input/NstInpPachinko.cpp"
    "core/input/NstInpRob.cpp"
    "core/input/NstInpKonamiHyperShot.cpp"
    "core/input/NstInpTopRider.cpp"
    "core/input/NstInpOekaKidsTablet.cpp"
    "core/input/NstInpSuborKeyboard.cpp"
    "core/NstChecksum.cpp"
    "core/NstState.cpp"
    "core/NstVideoRenderer.cpp"
    "core/NstApu.cpp"
    "core/NstHomebrew.cpp"
    "core/NstRam.cpp"
    "core/NstVideoFilter2xSaI.cpp"
    "core/api/NstApiVideo.cpp"
    "core/api/NstApiMovie.cpp"
    "core/api/NstApiHomebrew.cpp"
    "core/api/NstApiNsf.cpp"
    "core/api/NstApiInput.cpp"
    "core/api/NstApiRewinder.cpp"
    "core/api/NstApiUser.cpp"
    "core/api/NstApiFds.cpp"
    "core/api/NstApiCheats.cpp"
    "core/api/NstApiTapeRecorder.cpp"
    "core/api/NstApiBarcodeReader.cpp"
    "core/api/NstApiMachine.cpp"
    "core/api/NstApiEmulator.cpp"
    "core/api/NstApiCartridge.cpp"
    "core/api/NstApiDipSwitches.cpp"
    "core/api/NstApiSound.cpp"
    "core/NstLog.cpp"
    "core/NstSha1.cpp"
    "core/NstCpu.cpp"
    "core/NstCore.cpp"
    "core/NstMachine.cpp"
    "core/NstAssert.cpp"
    "core/NstVideoFilterHqX.cpp"
    "core/NstPatcherIps.cpp"
    "core/NstSoundPcm.cpp"
    "core/NstZlib.cpp"
    "core/NstNsf.cpp"
    "core/NstVideoFilterxBR.cpp"
    "core/NstFds.cpp"
    "core/NstCheats.cpp"
)

if(WIN32)
    set_target_properties(3rdnestopia
        PROPERTIES COMPILE_FLAGS "/wd4838 /wd4267 /wd5055 /wd4805"
    )
    target_include_directories(3rdnestopia PUBLIC
        ${ZLIB_INCLUDE_DIR}
    )
else()
    set_target_properties(3rdnestopia
        PROPERTIES COMPILE_FLAGS 
        "-Wno-narrowing -Wno-deprecated-anon-enum-enum-conversion -Wno-implicit-int-float-conversion -Wno-deprecated-enum-float-conversion -fPIC"
    )
endif()

target_link_libraries(3rdnestopia
    zlib
)
